policies/zerotrust/allow-all-authorization-onlineboutique.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-all
 namespace: onlineboutique
spec:
 rules:
 - {}
