policies/zerotrust/authorization-allow-all-ai-ml-nvidia.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-all
 namespace: ai-ml-nvidia
spec:
 rules:
 - {}
